# keel

./: .gitignore  Cargo.toml  FIELD-EFFECT-SELF-TERMINATION.md  KEEL.md  MANDELBROT-CONSTRAINT.md  NIGHT-WATCH.md  README.md  RESEARCH-FINDINGS.md  THE-BOAT-IS-THE-QUESTION.md  UNIVERSAL-LAW.md
crates/: Cargo.toml  README.md
crates/src/: lib.rs
docs/: GETTING-STARTED.md  KEEL.md  ROADMAP.md
docs/experiments/: README.md
docs/experiments/substrates/c-metal/: Makefile  README.md  keel.ld
docs/experiments/substrates/chemical/: README.md  keel-chemical-schema.md  keel-gray-scott.py  keel-ode.py
docs/experiments/substrates/dns/: README.md  keel-dns-agent.sh  keel-dns-schema.txt  keel-dns-server.py  keel.db  test_runner.py  test_server.py
docs/experiments/substrates/erlang/: README.md  keel_app.beam  keel_app.erl  keel_bearings.beam  keel_bearings.erl  keel_sup.beam  keel_sup.erl  keel_sup_chief.beam  keel_sup_chief.erl  keel_ttl.beam  keel_ttl.erl
docs/experiments/substrates/events/: core.es  demo.py  keel_events.py
docs/experiments/substrates/git/: README.md  keel-git-agent.sh  keel-git-bearings.sh  keel-git-init.sh
docs/experiments/substrates/gol/: README.md  demo.py  keel_gol.py
docs/experiments/substrates/hardware/: keel-cpu-design.md  keel-timer-design.md  keel-transistor.md  keel-ttl-logisim.circ
docs/experiments/substrates/nats/: README.md  (+2 more)
papers/: FIRST-PERSON-SELF-TERMINATION.md  KEEL-METHODOLOGY.md
scripts/: brew.sh  install.sh  keel-watch.sh
src/: field_server.rs  lib.rs  main.rs  plato.rs
tests/: keel_tests.rs
web/: field-view.html  prompts.html  ttl-demo.html
(+13 files in other folders)
