[package]
name = "keel"
version = "0.0.1"
edition = "2021"
description = "The yard you step into. Field-effect foundation for agent fleets."
authors = ["Casey Digennaro <casey@cocapn.com>"]
repository = "https://github.com/SuperInstance/keel"
license = "MIT"

[[bin]]
name = "keel"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
